--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <img id="mainImage" src="images/heart.png" alt="爱心">
+        <img id="mainImage" src="images/heart.webp" alt="爱心">
         <h1 id="question">可以成为我的恋人吗？</h1>
         <div class="buttons">
             <button id="yes">可以</button>
